Fixed sticky header on safari

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -3,7 +3,7 @@
     z-index: 150;
     box-shadow: 0 2px 3px rgba(0,0,0, 0.4);
     margin-bottom: -60px;
-    -webkit-position: sticky; /* Safari */
+    position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
 }
